--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -1,6 +1,6 @@
-<div class="feed-container onboarding relative" style="background: white; margin-top: 2px; padding: 5.384615384615%;">
+<div class="feed-container onboarding relative rounded-8-top" style="background: white; margin-top: 2px; padding: 5.384615384615%;">
 
-	<div class="steps absolute">
+	<div class="steps absolute unselectable">
 		<span style="color: #ccc;">
 			1. Connect
 		</span> 
@@ -13,9 +13,7 @@
 	</div>
 
 	<%=image_tag "import-star-black-144-2x.png",
-					:style => "width: 25%; padding: 14px 18px 0 0; 
-					right: 4.615384615%; top: auto; opacity: 0.15; filter: alpha(opacity=15);",
-		      :class => "absolute"%>
+		      :class => "star absolute"%>
 
 	<h1 style="color: #333; padding: 12px 0 6px;">
 		1. Connect
@@ -74,7 +72,7 @@
       
 </div> <!-- /feed-container -->
 
-<div class="feed-container border-box" style="background: #f8f8f8; padding: 5.384615384615%;">
+<div class="feed-container border-box rounded-8-bottom" style="background: #f8f8f8; padding: 5.384615384615%;">
 
 	<%=image_tag "logos/store-grid-5x3-2x.png",
 			      :class => ""%>
