--- a/app/views/users/_box.html.erb
+++ b/app/views/users/_box.html.erb
@@ -1,7 +1,8 @@
 	<div id="user_box" class="user-box">
   
     <%=link_to image_tag(user.square_image_url,
-                :class => "user-photo xxl rounded-3 absolute"),
+                :class => "user-photo xxl rounded-3 absolute",
+                :alt => user.full_name),
         user_path(user.handle,:src => "box")%>
         
     <div class="basics border-box">
@@ -18,7 +19,8 @@
 
             <%=image_tag image_path('import-star-check-ccc-32-2x.png'),
                 :class => "",
-                :style => "height: 24px;"%>
+                :style => "height: 24px;",
+                :alt => "Connected Account"%>
           </a>
         <%end%>
     	</span>
@@ -34,14 +36,16 @@
    
       <%if user.tw_user_id.present?%>
         <%=link_to image_tag("social/t-box.png", 
-                             :class => "t-box opacity-80-100"),
+                             :class => "t-box opacity-80-100",
+                             :alt => ""),
                    user.tw_profile_url,
                    :target => '_blank'%>
       <%end%>
       
       <%if user.fb_user_id.present?%>
         <%=link_to image_tag("social/f-box.png", 
-                             :class => "f-box opacity-80-100"),
+                             :class => "f-box opacity-80-100",
+                             :alt => ""),
                    user.fb_profile_url,
                    :target => '_blank'%>
       <%end%>
