home alt tag seo cleanup

--- a/app/views/footers/_home.html.erb
+++ b/app/views/footers/_home.html.erb
@@ -26,28 +26,32 @@
   			<a href="http://blogs.wsj.com/venturecapital/2012/12/11/qa-with-michael-dearing-how-investing-is-like-visiting-a-farmers-market/"
 					target="_blank" alt="Wall Street Journal">
 					<%=image_tag "home/home-coverage-wall-street-journal.png",
-    					:style => "width:151px;"%>		
+    					:style => "width:151px;",
+    					:alt => "Wall Street Journal"%>			
   			</a>
   		</li>
   		<li>
   			<a href="http://betakit.com/2012/12/10/to-pick-up-where-blippy-failed-mine-launches-social-network-for-online-purchases"
 					target="_blank" alt="Betakit">
 					<%=image_tag "home/home-coverage-betakit.png",
-    					:style => "width:49px; padding-bottom: 2px;"%>	
+    					:style => "width:49px; padding-bottom: 2px;",
+    					:alt => "Betakit"%>		
   			</a>
   		</li>
   		<li>
   			<a href="http://techcrunch.com/2012/12/10/blippy-redux-mine-launches-a-service-for-sharing-your-purchases-with-friends/"
 					target="_blank" alt="TechCrunch">
 					<%=image_tag "home/home-coverage-techcrunch.png",
-    					:style => "width:96px;"%>	
+    					:style => "width:96px;",
+    					:alt => "TechCrunch"%>	
   			</a>
   		</li>
   		<li>
   			<a href="http://allthingsd.com/20121210/meet-mine-your-life-in-e-shopping/"
 					target="_blank" alt="All Things D">
 					<%=image_tag "home/home-coverage-all-things-d.png",
-    					:style => "width:97px; padding-top: 2px;"%>	
+    					:style => "width:97px; padding-top: 2px;",
+    					:alt => "All Things Digital"%>		
   			</a>
   		</li>
   	</ul>
