--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -17,7 +17,8 @@
 	<div class="home-container absolute">
 	
 		<%=image_tag "home/home-mine-logo-2x.png",
-    :class => "mine-logo unselectable"%>	
+    :class => "mine-logo unselectable",
+    :alt => "Mine"%>	
     		
 		<h1 class="unselectable">
 			A directory <br>
@@ -58,7 +59,8 @@
 	    class="btn btn-large btn-facebook rounded-3-left shaded-strong relative">
 	  <span class='hide-when-loading'>
 	    <%=image_tag "social/f-box.png",
-	    :class => "f-box"%>
+	    :class => "f-box",
+	    :alt => ""%>
 	    Facebook
 	  </span>
 	  <i class='icon-loading icon-white'></i>
@@ -69,7 +71,8 @@
 	    class="btn btn-large btn-twitter rounded-3-right shaded-strong relative">
 	  <span class='hide-when-loading'>
 	    <%=image_tag "social/t-box.png",
-	    :class => "t-box"%>
+	    :class => "t-box",
+	    :alt => ""%>
 	    Twitter
 	  </span>
 	  <i class='icon-loading icon-white'></i>
