welcome connect tweaks

--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -20,12 +20,12 @@
 	</h1>
 	
 	<h2 style="color: #999;">
-		Choose the email you use <br>
+		Connect the email you use <br>
 		for online shopping:
 	</h2>
 	
 	<div class="txt s" style="color: #999; padding-top: 10px;">
-		You can add others later.
+		Amazon, eBay, iTunes etc...
 	</div>
 	
 	<div class="hero rounded-8 border-box">
