--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -468,7 +468,8 @@ ul.notifications li.user-action-box {
 	color: #777; 
 	height: 86px; 
 	line-height: 86px; 
-	font-size: 16px; }
+	font-size: 16px;
+	font-weight: bold; }
 
 .onboarding h1, h2 {
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light",
