lower line normal font on grid, logo fix

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -5,7 +5,7 @@
         :class => "logo absolute rwd-hide"),
       root_path(:src => "unapproved_purchases")%>
 	     							
-	<div id="progress_message" class="indicator working">
+	<div id="progress_message" class="indicator working relative">
 	
     <span id="progress_store" class="message-working">
     </span>
